--- a/pup_osas_website/css/nav_style.css
+++ b/pup_osas_website/css/nav_style.css
@@ -20,15 +20,15 @@ nav .logo{
   font-size: 35px;
   font-weight: 600;
 }
-nav ul{
+nav .nav_item{
   display: flex;
   flex-wrap: wrap;
   list-style: none;
 }
-nav ul li{
+nav .nav_item .nav_bttn{
   margin: 0 5px;
 }
-nav ul li a{
+nav .nav_item .nav_bttn a{
   color: #f2f2f2;
   text-decoration: none;
   font-size: 18px;
@@ -38,8 +38,8 @@ nav ul li a{
   letter-spacing: 1px;
   transition: all 0.3s ease;
 }
-nav ul li a.active,
-nav ul li a:hover{
+nav .nav_item .nav_bttn a.active,
+nav .nav_item .nav_bttn a:hover{
   color: #111;
   background: #fff;
 }
@@ -64,7 +64,7 @@ input[type="checkbox"]{
   #click:checked ~ .menu-btn i:before{
     content: "\f00d";
   }
-  nav ul{
+  nav .nav_item{
     position: fixed;
     top: 80px;
     left: -100%;
@@ -78,11 +78,11 @@ input[type="checkbox"]{
   #click:checked ~ ul{
     left: 0;
   }
-  nav ul li{
+  nav .nav_item li{
     width: 100%;
     margin: 40px 0;
   }
-  nav ul li a{
+  nav .nav_item li a{
     width: 100%;
     margin-left: -100%;
     display: block;
@@ -92,24 +92,9 @@ input[type="checkbox"]{
   #click:checked ~ ul li a{
     margin-left: 0px;
   }
-  nav ul li a.active,
-  nav ul li a:hover{
+  nav .nav_item .nav_bttn a.active,
+  nav .nav_item .nav_bttn a:hover{
     background: none;
     color: cyan;
   }
-}
-.content{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  z-index: -1;
-  width: 100%;
-  padding: 0 30px;
-  color: #1b1b1b;
-}
-.content div{
-  font-size: 40px;
-  font-weight: 700;
 }
