--- a/pup_osas_website/css/user_nofi_dd.css
+++ b/pup_osas_website/css/user_nofi_dd.css
@@ -1,10 +1,11 @@
 .notifi-box {
-    padding-top: 20px;
+	background-color: #fff;
+    padding-top: 2px;
 	width: 300px;
 	height: 0px;
 	opacity: 0;
 	position: absolute;
-	top: 63px;
+	top: 80px;
 	right: 35px;
 	transition: 1s opacity, 250ms height;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
