--- a/pup_osas_website/css/nav_style.css
+++ b/pup_osas_website/css/nav_style.css
@@ -5,6 +5,9 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 } 
+body{
+  background-color: #f2f2f2;
+}
 nav{
   display: flex;
   height: 80px;
