--- a/pup_osas_website/css/user_index.css
+++ b/pup_osas_website/css/user_index.css
@@ -1,15 +1,19 @@
 .content{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    z-index: -1;
-    width: 100%;
-    padding: 0 30px;
-    color: #1b1b1b;
-  }
-  .content div{
-    font-size: 40px;
-    font-weight: 700;
-  }
+  justify-content: center;
+  position: absolute;
+  z-index: -1;
+  margin: 40px 10%;
+  min-width: 400px;
+  height: 500px;
+  width: 80%;
+  color: #1b1b1b;
+  background-color: #fff;
+  border: #fff;
+  border-radius: 30px;
+}
+
+.content h2{
+  margin: 30px 0px 0px 30px;
+  font-size: 26px;
+  font-weight: 700;
+}
