--- a/pup_osas_website/css/user_reg.css
+++ b/pup_osas_website/css/user_reg.css
@@ -15,7 +15,7 @@ body{
 .container{
   max-width: 440px;
   padding: 0 20px;
-  margin: 110px auto;
+  margin: 0.5% auto;
 }
 .wrapper{
   width: 100%;
