--- a/pup_osas_website/css/admin_nav_style.css
+++ b/pup_osas_website/css/admin_nav_style.css
@@ -5,6 +5,9 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+body{
+  background-color: #f2f2f2;
+}
 .wrapper{
   height: 100%;
   width: 300px;
@@ -106,21 +109,4 @@
   color: cyan;
 }
 
-.content{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  color: #202020;
-  z-index: -1;
-  width: 100%;
-  text-align: center;
-}
-.content .header{
-  font-size: 45px;
-  font-weight: 700;
-}
-.content p{
-  font-size: 40px;
-  font-weight: 700;
-}
+
