--- a/pup_osas_website/css/admin_sched.css
+++ b/pup_osas_website/css/admin_sched.css
@@ -4,7 +4,7 @@
     z-index: -1;
     margin: 40px 10%;
     min-width: 400px;
-    height: 500px;
+    height: auto;
     width: 80%;
     color: #1b1b1b;
     background-color: #fff;
@@ -12,8 +12,103 @@
     border-radius: 30px;
   }
   
-.content h2{
+.content .title{
   margin: 30px 0px 0px 30px;
   font-size: 26px;
   font-weight: 700;
+}
+.app-sched{
+  position: relative;
+  margin: 25px 25px;
+  min-width: 350px;
+  width: 95%;
+  height: 300px;
+  background-color: rgba(233, 233, 233, 0.884);
+  border: rgba(233, 233, 233, 0.884);
+  border-radius: 30px;
+}
+.app-sched h2{
+  font-size: 18px;
+  font-weight: 700;
+  color: #fff;
+  background-color: #1b1b1b;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 30px 30px 0px 0px;
+}
+.app-sched .app-list{
+  margin: 15px 20px;
+  font-size: 16px;
+}
+.app-sched .app-list .app-item{
+  margin: 10px
+}
+.app-transac{
+  justify-content: center;
+  margin: 30px 30px;
+  min-width: 350px;
+  width: 95%;
+  height: 350px;
+  background-color: rgba(236, 236, 236, 0.938);
+  border: rgba(236, 236, 236, 0.938);
+  border-radius: 30px;
+}
+.app-transac h2{
+  font-size: 18px;
+  font-weight: 700;
+  color: #fff;
+  background-color: #1b1b1b;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 30px 30px 0px 0px;
+}
+.app-transac .app-td-list{
+  border-collapse: collapse;
+  width: 100%;
+}
+.app-transac .app-td-list .app-title,
+.app-transac .app-td-list .app-td-item{
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px; 
+}
+.app-transac .app-td-list .app-title{
+  color: #fff;
+  background-color: #1b1b1b;
+}
+
+.add-sched{
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  margin: 25px 25px;
+  min-width: 350px;
+  width: 95%;
+  height: 150px;
+  background-color: rgba(233, 233, 233, 0.884);
+  border: rgba(233, 233, 233, 0.884);
+  border-radius: 30px;
+}
+.add-sched .add-app-sched .bttn{
+  position: relative;
+  left: 10%;
+  background-color: #1b1b1b; 
+  border: none;
+  border-radius: 20px;
+  color: #fff;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+@media(max-width: 1020px){
+  .add-sched, .app-sched, .app-transac{
+    width: 90%;
+  }
 }
