--- a/pup_osas_website/css/admin_sched.css
+++ b/pup_osas_website/css/admin_sched.css
@@ -94,8 +94,11 @@
   border-radius: 30px;
 }
 .add-sched .add-app-sched .bttn{
-  position: relative;
-  left: 10%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   background-color: #1b1b1b; 
   border: none;
   border-radius: 20px;
